cabal-version:      3.4
name:               shape-shooter
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Aurvyn
maintainer:         admin@dysrakescence.eu.org
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable shape-shooter
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base, gloss, random
    hs-source-dirs:   app
    default-language: GHC2021
